<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/activity_background_color">

    <TextView
        android:id="@+id/exit_app"
        android:layout_width="257dp"
        android:layout_height="@dimen/app_name_height"
        android:text="@string/app_name"
        android:textSize="@dimen/app_name_size"
        android:gravity="center"
        android:textColor="#E8EAED"
        android:paddingLeft="24dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_exit_app"/>
    <LinearLayout
        android:id="@+id/tab_container"
        android:layout_width="257dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/tab_layout_background"
        android:layout_below="@id/exit_app"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/maintenance_appointment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/maintenance_appointment_height"
            android:text="@string/maintenance_appointment_text"
            android:textSize="@dimen/maintenance_appointment_size"
            android:gravity="center"
            android:textColor="@drawable/maintenance_text_selector"
            android:background="@drawable/maintenance_bg_selector"/>
        <TextView
            android:id="@+id/maintenance_records"
            android:layout_width="match_parent"
            android:layout_height="@dimen/maintenance_appointment_height"
            android:text="@string/maintenance_records_text"
            android:textSize="@dimen/maintenance_appointment_size"
            android:gravity="center"
            android:textColor="@drawable/maintenance_text_selector"
            android:background="@drawable/maintenance_bg_selector"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="911dp"
        android:layout_height="match_parent"
        android:paddingLeft="32dp"
        android:layout_toRightOf="@id/tab_container"></FrameLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_image_right"
        android:layout_toRightOf="@id/fragment_container"></ImageView>

</RelativeLayout>