<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/date_item"
    android:layout_width="match_parent"
    android:layout_height="305dp"
    android:background="@drawable/position_item_background"
    android:padding="20dp"
    android:layout_marginBottom="20dp">
    <TextView
        android:id="@+id/position_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="left|center_vertical"
        android:textColor="@color/color_app_name"
        android:text="1111"
        android:textSize="28sp"></TextView>
    <TextView
        android:id="@+id/position_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/position_name"
        android:textColor="#85e7e7e9"
        android:text="2222"
        android:textSize="22sp"></TextView>

    <Button
        android:id="@+id/maintainance"
        android:layout_width="144dp"
        android:layout_height="55dp"
        android:layout_below="@id/position_address"
        android:layout_marginTop="16dp"
        android:background="@drawable/repair_selector"
        android:text="@string/maintenance_text"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/color_app_name"/>
    <Button
        android:id="@+id/repair"
        android:layout_width="144dp"
        android:layout_height="55dp"
        android:layout_below="@id/position_address"
        android:layout_toRightOf="@+id/maintainance"
        android:background="@drawable/repair_selector"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/repair_text"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/color_app_name"/>
    <TextView
        android:id="@+id/booking_time_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/repair"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/booking_time_toast"
        android:textColor="@color/color_app_name"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="24dp"
        android:layout_marginRight="4dp"
        android:src="@drawable/ic_call_icon"
        />

    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/booking_time_list"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_below="@id/booking_time_toast"/>

</RelativeLayout>